--- a/app/views/createEvent.scala.html
+++ b/app/views/createEvent.scala.html
@@ -39,7 +39,7 @@
     <div class="row">
         <button id="saveButton" class="columns small-12" type="submit">Save</button>
     </div>
-</form>
+</form>z
 
 <script type="text/jsx" src="@routes.Assets.at("javascripts/components/event-list.js")" ></script>
 <script type="text/jsx" src="@routes.Assets.at("javascripts/components/events-components.js")" ></script>
