--- a/app/views/editFrontpage.scala.html
+++ b/app/views/editFrontpage.scala.html
@@ -18,7 +18,7 @@
    <h4 class="text-center">Edit the committee</h4>
 
     <form class="small-8 columns small-centered" id="app-4" action="/update/commitee" method="post" enctype="multipart/form-data">
-    <person v-for="(person, index) in people" v-on:bye="removePerson" class="row" imageUrl="person.imageUrl" v-bind:index="index"></person>
+    <person v-for="(person, index) in people" v-on:bye="removePerson" class="row" v-bind:picture="person.imageUrl" v-bind:description="person.title" v-bind:index="index"></person>
 
     <div v-on:click="addPerson">New Member</div>
     <div v-on:click="addPerson">Save</div>
@@ -43,7 +43,7 @@
           }}});
 
         var person = Vue.component('person', {
-        props : ['index', 'technicalId'],
+        props : ['index', 'technicalId', 'description',  'picture'],
             data: function () { return {file: undefined } },
             methods: {
 
@@ -65,18 +65,12 @@
             },
             template: '<div class="">\
                     <div runat="server">\
-                       <image-uploader v-bind:inputLabel="imageInputLabel()"></image-uploader>\
-                       <input type="text" placeholder="Committee Position" v-bind:name="positionInputLabel()"/>\
+                       <image-uploader v-bind:inputLabel="imageInputLabel()" v-bind:imageUrl="this.picture"></image-uploader>\
+                       <input type="text" placeholder="Committee Position" v-bind:name="positionInputLabel()" v-bind:value="this.description"/>\
                        <input  type="hidden" v-bind:value="technicalId()" v-bind:name="technicalIdLabel()">\
                        <div v-on:click="remove">DELETE</div>\
                     </div>\
-            </div>',
-
-
-            created: function () {
-                // `this` points to the vm instance
-                console.log('a is: ' + this)
-            }
+            </div>'
         })
 
         var textEditor = new Vue({el: '#text-editor'})
@@ -90,11 +84,13 @@
             },
             created: function () {
                 var people = this.people
-              var oReq = new XMLHttpRequest();
-oReq.onload = function () {
-console.log('calling listener')
-    this.people = JSON.parse(oReq.responseText);
-  }.bind(this);
+                var oReq = new XMLHttpRequest();
+                oReq.onload = function () {
+                                console.log('calling listener')
+                                var ppl = JSON.parse(oReq.responseText)
+                                console.log(ppl)
+                                this.people = ppl;
+                              }.bind(this);
 
 
                oReq.addEventListener("load", this.reqListener);
@@ -108,7 +104,12 @@ console.log('calling listener')
                 },
                 removePerson: function () {
                     console.log('removing a person')
-                    this.people.pop()
+                },
+                deleteCommiteeMember : function() {
+                    var oReq = new XMLHttpRequest();
+                    oReq.addEventListener("load", this.reqListener);
+                    oReq.open("DELETE", "/json/commitee" + this.);
+                    oReq.send();
                 }
             }
         })
