--- a/app/views/portal.scala.html
+++ b/app/views/portal.scala.html
@@ -6,22 +6,8 @@
 
 <li><a href="/create/event">Add or Edit an Event</a></li>
 <li><a href="/create/blog">Add or Edit a Blog entry</a></li>
-
-<script src="@routes.Assets.at("javascripts/dropzone/dropzone.js")"></script>
-<link href="@routes.Assets.at("stylesheets/dropzone.css")" rel="stylesheet">
-
-<h2>Edit the committee</h2>
-
-
-<p>
-  This is the most minimal example of Dropzone. The upload in this example
-  doesn't work, because there is no actual server to handle the file upload.
-</p>
-
-<!-- Change /upload-target to your upload address -->
-<form action="/upload-target" class="dropzone"></form>
-
-
+<li><a href="/update/committee">Edit the committee</a></li>
+<li><a href="/update/frontpage">Edit the frontpage</a></li>
 
 @logoutButton()
 
