--- a/app/views/aboutUs.scala.html
+++ b/app/views/aboutUs.scala.html
@@ -5,7 +5,7 @@
 <div class="row">
     <h1 class="text-center column">The Public Bubble</h1>
     <img class="img-responsive"
-         src="@frontpage.imageUrl"/>
+         src="/frontpage/image"/>
 
     <p class="large-9 columns">
         @Html(frontpage.content)
@@ -25,7 +25,7 @@
 
             <div class="col-xs-6">
                 <img class="headshot"
-                     src="@member.imageUrl"/>
+                     src="/committee/@member.id/image">
                 <h4>@member.description</h4>
             </div>
             }
