--- a/app/views/editCommittee.scala.html
+++ b/app/views/editCommittee.scala.html
@@ -21,20 +21,20 @@ const down = false
 
 var imageUploader = Vue.component('image-uploader', {
     template: '\<div>\
-                  <img v-bind:height="this.previewheight" v-bind:width="this.previewwidth" style="display: block" v-bind:src="this.imageUrl" />\
+                  <img v-bind:height="this.previewheight" v-bind:width="this.previewwidth" style="display: block" v-bind:src="this.image" />\
                   <input v-on:change="this.readURL" type="file" v-bind:name="this.inputLabel" />\
                 </div>',
-    props: ['imageUrl', 'previewheight', 'previewwidth', 'inputLabel'],
+    props: ['image', 'previewheight', 'previewwidth', 'inputLabel'],
     methods: {
         readURL: function (e) {
             if (e.target.files && e.target.files[0]) {
                 console.log('file upload found')
                 var reader = new FileReader();
                 reader.onload = function (e) {
-                    this.imageUrl = e.target.result;
+                    this.image = e.target.result;
                 }.bind(this)
                 this.$emit('updated')
-                this.imageUrl = reader.readAsDataURL(e.target.files[0]);
+                this.image = reader.readAsDataURL(e.target.files[0]);
             }
         }
     }
@@ -67,11 +67,14 @@ var person = Vue.component('person', {
         },
         inputLabel: function (val) {
             return 'member[' + this.index + ']' + val
+        },
+        imageUrl : function () {
+           return '/committee/' + this.person.technicalId + '/image'
         }
     },
     template: '<div class="">\
                     <div runat="server" style="border:solid 1px">\
-                       <image-uploader v-bind:inputLabel="inputLabel(\'image\')" v-bind:imageUrl="this.person.imageUrl" v-bind:previewheight="120" v-bind:previewwidth="120"></image-uploader>\
+                       <image-uploader v-bind:inputLabel="inputLabel(\'image\')" v-bind:image="imageUrl()" v-bind:previewheight="120" v-bind:previewwidth="120"></image-uploader>\
                        <input type="text" v-on:change="change" placeholder="Committee Position" v-bind:name="inputLabel(\'description\')" v-model="this.person.description"/>\
                        <input type="hidden" v-bind:name="inputLabel(\'position\')" v-bind:value="this.person.position" readonly/>\
                        <input  type="hidden" v-bind:value="this.person.technicalId" v-bind:name="inputLabel(\'id\')">\
