--- a/app/views/createEvent.scala.html
+++ b/app/views/createEvent.scala.html
@@ -31,7 +31,7 @@
         @helper.input(eventForm("startTime"), '_label -> "Start Time", '_help -> "" ) { (id, name, value, args) =>
                 <input class="form-control" type="datetime-local" name="@name" id="@id" value="@value" @toHtmlArgs(args)>
             }
-        @helper.input(eventForm("endTime"), '_label -> "Start Time", '_help -> "" ) { (id, name, value, args) =>
+        @helper.input(eventForm("endTime"), '_label -> "End Time", '_help -> "" ) { (id, name, value, args) =>
                 <input class="form-control" type="datetime-local" name="@name" id="@id" value="@value" @toHtmlArgs(args)>
         }
         @helper.inputText(eventForm("description"), 'class -> "form-control", '_label -> "Description", '_help -> "", 'id -> "wysiwyg-editor")
