--- a/app/views/createEvent.scala.html
+++ b/app/views/createEvent.scala.html
@@ -7,7 +7,7 @@
 @if(!eventForm.value.isEmpty){
 <button id="newEvent" onclick="window.location = '/create/event';">
     Create new event
-</div>
+</button>
 }
 <div id="eventsBox" class="columns small-2 columns"></div>
 
