amend templates to include new image naming

--- a/app/views/events.scala.html
+++ b/app/views/events.scala.html
@@ -37,7 +37,7 @@
                     <h2 class="text-center"><i>@maybeMainEvent.get.title</i></h2>
                 </div>
                 <div class="row">
-                    <img class="col-xs-12 img-responsive" src="@{maybeMainEvent.get.image1Url}"/>
+                    <img class="col-xs-12 img-responsive" src="@{maybeMainEvent.get.image1}"/>
                 </div>
                 <div class="row" style="margin-top: 5px">
                     <div id="whenAndWhere-grid" class="container" >
