try to configur google api

--- a/app/views/createEvent.scala.html
+++ b/app/views/createEvent.scala.html
@@ -12,7 +12,7 @@
 }
 <div id="eventsBox" class="columns small-2 columns"></div>
 
-<script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=@{Play.current.configuration.getString("google.apiKey")}"></script>
+<script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=@{Play.current.configuration.getString("google.api.key")}"></script>
 
 <form class="row" id="eventForm" action="@routes.EventsController.save" method="post">
         <div class="columns small-8" >
