--- a/app/views/googleMapTag.scala.html
+++ b/app/views/googleMapTag.scala.html
@@ -52,7 +52,7 @@
         }
 
     </style>
-    <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=@{Play.current.configuration.getString("google.apiKey")}"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=@{Play.current.configuration.getString("google.api.key")}"></script>
 </head>
 <body>
 <div id="map-canvas"></div>
