allow missing images

--- a/app/views/contentCreator.scala.html
+++ b/app/views/contentCreator.scala.html
@@ -27,6 +27,14 @@
         <img style="height:50px" src="@routes.Assets.at("images/logo_mobile.svg")" class="large-4 columns show-for-small-only"">
         <nav id="bubble-banner-nav" class="large-8 columns">
             <ul class="button-group">
+            <li><a class="button nav-button" href="/update/committee">
+                <label>Edit the committee</label>
+                </a>
+            </li>
+            <li><a class="button nav-button" href="/update/frontpage">
+                <label>Edit the frontpage</label>
+                </a>
+            </li>
             <li><a class="button nav-button" href="/create/event">
                 <img class="nav-icon" src="@routes.Assets.at("icons/fi-calendar.svg")">
                 <label>Create an event</label>
